# bring-order

./: .gitignore  .pylintrc  README.md  noteout  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  run_robot_tests.sh  setup.py  tasks.py  test_file.ipynb
.github/workflows/: main.yml  prod.yml
bring_order/: ai.py  bodi.py  bogui.py  boutils.py  boval.py  bringorder.py  deductive.py  inductive.py  inductive_summary_storage.py  limitations.py  next_analysis.py  statistics.py  stattests.py
bring_order.egg-info/: PKG-INFO
bringorder.egg-info/: PKG-INFO  SOURCES.txt
documentation/: DoD.md  architecture.md  bring_order_class_diagram_simple.txt  bring_order_class_diagram_wfunctions.txt  suggestions_for_improvement.md  testing_report.md  time_report.md  user_guide.md
documentation/pictures/: BO_Bodi_seqdiag.txt  bo_seqdiag_init.txt  bring_order_class_diagram_simple.txt  bring_order_class_diagram_wfunctions.txt
documentation/time_reports/: time_management.md
src/: .hypothesis.ipynb.swp  analysis.py  bo_utils.py  bogui.py  boutils.py  bringorder.py  deductive.py  hypotheses.py  hypothesis.ipynb  hypothesis.py  inductive.py
src/tests/: hypothesis_test.py  test_hypothesis.ipynb
testbringorder.egg-info/: PKG-INFO  SOURCES.txt
tests/: ai_test.py  bodi_test.py  boutils_test.py  boval_test.py  bringorder_test.py  deductive.spec.js  deductive_test.py  hypothesis_test.py  inductive.spec.js  inductive_storage_summary_test.py  inductive_test.py  limitations_test.py  loansData.csv  notebook.spec.js  stattest_test.py
(+6 files in other folders)
