[tool.poetry]
name = "bring-order"
version = "0.1.0"
description = ""
authors = ["zmejka <evgeniia.minaeva@tutanota.com>"]
readme = "README.md"
packages = [{include = "bring_order"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
invoke = "^2.1.2"
ipywidgets = "^8.0.6"
display = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.4"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
